# double-sipm

./: .gitignore  justfile
double-sipm/macs/: vis.mac
flake/: outputs.nix
macs/: lo-scint.mac  vis.mac
src/: CMakeLists.txt  double-sipm.cc  generator.cc  generator.hh  geometry.cc  geometry.hh  materials.cc  materials.hh  my.cc  my.hh
